[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -68.0
margin_right = 196.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 392.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 392.0
margin_bottom = 14.0
text = "Login"

[node name="UsernameField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 392.0
margin_bottom = 42.0
placeholder_text = "Usu√°rio"

[node name="PasswordField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 392.0
margin_bottom = 70.0
secret = true
placeholder_text = "Senha"

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 392.0
margin_bottom = 94.0
text = "Entrar"

[node name="CreateAccountButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 392.0
margin_bottom = 118.0
text = "Criar Conta"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color( 0.894118, 0.117647, 0.117647, 1 )
margin_top = 122.0
margin_right = 392.0
margin_bottom = 136.0
